@@ -1,3 +1,15 @@
+2010-06-04  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Make HTML5Lexer go fast
+        https://bugs.webkit.org/show_bug.cgi?id=40048
+
+        We're going to do this patch in small steps to make it easier to verify correctness.
+
+        * html/HTML5Lexer.cpp:
+        (WebCore::HTML5Lexer::nextToken):
+
 2010-06-04  Jay Civelli  <jcivelli@chromium.org>
 
         Reviewed by David Levin.
